--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,7 @@ bind-key l select-pane -R
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'dracula/tmux'
