--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,10 +39,15 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# Fix key bindings
+bind-key C-l send-keys 'C-l'
+bind-key C-\\ send-keys 'C-\'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 
 # Status bar
