--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,11 +33,9 @@ bind-key c new-window -c "#{pane_current_path}"
 set -sa terminal-overrides ",xterm*:Tc"
 set -g default-terminal "screen-256color"
 
-# Pane navigation
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# Window navigation
+bind-key -n M-l next-window
+bind-key -n M-h previous-window
 
 # Fix key bindings
 bind-key C-l send-keys 'C-l'
