change key bind for clear screen and go home

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,8 +34,8 @@ set -sa terminal-overrides ",xterm*:Tc"
 set -g default-terminal "screen-256color"
 
 # Window navigation
-bind-key -n M-l next-window
-bind-key -n M-h previous-window
+bind-key -n M-j next-window
+bind-key -n M-k previous-window
 
 # Fix key bindings
 bind-key C-l send-keys 'C-l'
