add bind-keys for pane navigation in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,12 @@ bind-key c new-window -c "#{pane_current_path}"
 set -sa terminal-overrides ",xterm*:Tc"
 set -g default-terminal "screen-256color"
 
+# Pane navigation
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
 # Window navigation
 bind-key -n M-k next-window
 bind-key -n M-j previous-window
