tmux: add clear history bind-key

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,6 +43,9 @@ bind-key l select-pane -R
 bind-key C-l send-keys 'C-l'
 bind-key C-\\ send-keys 'C-\'
 
+# Clear History
+bind-key C-o clear-history
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
