tmux: remove window navigation bind-keys and and clear history bind-key

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,13 +39,12 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-# Window navigation
-bind-key -n M-k next-window
-bind-key -n M-j previous-window
-
 # Fix key bindings
 bind-key C-l send-keys 'C-l'
 bind-key C-\\ send-keys 'C-\'
+
+# Clear history
+bind-key C-o clear-history
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
