--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,7 +57,7 @@ set -g @plugin 'dracula/tmux'
 set -g status-position top
 set -g @dracula-plugins 'cpu-usage ram-usage'
 set -g @dracula-show-powerline true
-set -g @dracula-show-flags true
+set -g @dracula-show-flags false
 set -g @dracula-refresh-rate 3
 set -g @dracula-show-left-icon session
 set -g @dracula-show-empty-plugins false
