--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,4 @@
-/*
-
-!/.bashrc
-!/.gitconfig
-!/.gitignore
-!/.myclirc
-!/.p10k.zsh
-!/.tmux.conf
-!/.vimrc
-!/.vimrc.less
-!/.zprofile
-!/.zshrc
-
-!/.my
+/home/wcs/.dotfilesgit
 /.my/zsh-plugins/array-locations.zsh
 /.my/zsh-plugins/secret-variables.zsh
-
-!/.config
-/.config/*
-!/.config/bat
-!/.config/nvim
-/.config/nvim/plugin/*
-
 *.log
