--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-/home/wcs/.dotfilesgit
+/*
+
+!/.bashrc
+!/.gitconfig
+!/.gitignore
+!/.myclirc
+!/.p10k.zsh
+!/.tmux.conf
+!/.vimrc
+!/.vimrc.less
+!/.zprofile
+!/.zshrc
+
+!/.my
 /.my/zsh-plugins/array-locations.zsh
 /.my/zsh-plugins/secret-variables.zsh
+
+!/.config
+/.config/*
+!/.config/bat
+!/.config/nvim
+/.config/nvim/plugin/*
+
 *.log
