tmux: add swap windows bind-keys

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,10 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# Swap windows
+bind-key u swap-window -d -t -1
+bind-key ç swap-window -d -t +1
+
 # Fix key bindings
 bind-key C-l send-keys 'C-l'
 bind-key C-\\ send-keys 'C-\'
